--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^7.1.1",
     "@rails/webpacker": "5.4.4",
-    "chart.js": "^4.4.0",
+    "bootstrap": "^5.3.2",
     "chartkick": "^5.0.1",
+    "jquery": "^3.7.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
